--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,37 +1,22 @@
-name: Main
-
-on:
-  push:
-    branches: ['main']
-
-env:
-  FORCE_COLOR: 1
-
-jobs:
-  deploy-staging:
-    name: Deploy (staging)
-    runs-on: ubuntu-24.04
-    permissions:
-      contents: read
-    timeout-minutes: 10
-    concurrency: ${{ github.workflow }}-deploy-staging
-    steps:
-      - name: Checkout Repo
-        uses: actions/checkout@v4
-      - uses: ./.github/actions/setup
-
-      # Run tests & checks before deploying
-      - name: Syncpack lint
-        run: pnpm check:deps
-      - name: Run linter
-        run: pnpm check:turbo
-      - name: Run linter (formatting)
-        run: pnpm check:format
-      - name: Run tests
-        run: pnpm test
-
-      - name: Deploy Workers (staging)
-        run: pnpm turbo deploy -- -e staging
-        env:
-          CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
-          CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+            - name: Armory Continuous Deployment-as-a-Service
+  # You may pin to the exact commit or the version.
+  # uses: armory/cli-deploy-action@36fc96b3e295e960d22f96513ef781bb9865a87c
+  uses: armory/cli-deploy-action@v1.0.0
+  with:
+    # Path to the configuration YAML file used to configure your deployment
+    path-to-file: 
+    # extra args to the deployment start command
+    applicationName: # optional
+    # extra context params to the deployment start command
+    addContext: # optional
+    # ClientId for Armory Cloud
+    clientId: 
+    # ClientSecret for Armory Cloud
+    clientSecret: 
+    # Intended audience of requests that will use your Armory Cloud authentication token. Is deployHostUrl by default
+    audience: # optional, default is https://api.cloud.armory.io
+    # Armory Cloud authentication provider url
+    tokenIssuerUrl: # optional, default is https://auth.cloud.armory.io/oauth
+    # Location of the Armory Cloud API which will handle your deployment
+    deployHostUrl: # optional, default is api.cloud.armory.io
+          
